--- a/midtermwebpage.html
+++ b/midtermwebpage.html
@@ -63,6 +63,7 @@
 
 			<div class="jumbotron">
 			<h1 class="event">Halloween Cultacular(21+)</h1>
+                <h2 class="october">October 31, 9pm-4am</h2>
 			<p>The event of the year!Gear up for the hottest event this Halloween season! We are bringing you the greatest that the holiday has to offer, including speciality drinks, outstanding live music, our 'Escape Room from Hell', 'Most Ghoulish' costume competition, and so much more! Here on our site, you can find more information about the acitivites happening. Make sure you get your tickets before they are sold out!</p>
 
 			</div><!--end jumbortron-->
